FIxed row and spacing between 1st and 2nd image

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .imageresize img {
-    width: 70%;
+    width: 80%;
     height: auto;
 }
 
